# DRC-CKD-CBR-Classifier

./: COMO_USAR_O_CHAT_COPILOT.md  GUIA_PASSO_A_PASSO.md  README.md  REPORT.md  main.ipynb  main_final.ipynb  pyproject.toml  report.md  report_2.md
.github/: copilot-instructions.md
dataset/: ckd.csv
docs/cbrkit/: main-documentation.md  retrieval-module.md  sim-module.md
